Update: Align button structure with other Adapt icon buttons (fixes #13) (#15)

--- a/less/scrollPrompt.less
+++ b/less/scrollPrompt.less
@@ -6,7 +6,7 @@
     align-items: center;
   }
 
-  &__btn-icon .icon {
+  &__btn .icon {
     .icon-controls-down;
   }
 
